:bug: fix: scrollbar

--- a/src/theme/components/scrollbar.less
+++ b/src/theme/components/scrollbar.less
@@ -1,7 +1,7 @@
 /* width */
 ::-webkit-scrollbar {
-  width: 0;
-  height: 0;
+  width: 2px;
+  height: 2px;
 }
 
 /* Track */
