--- a/style.css
+++ b/style.css
@@ -1515,8 +1515,8 @@ template {
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 0;
-  height: 0;
+  width: 2px;
+  height: 2px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
